Enigma/testing/error/wrongplugboard.inp
*B BETA I II III AABC (BSC)(CD)
JIFOSDJFODS